# pyatc

./: pyproject.toml
atc_cli/: main.py
pyatc_cli/: main.py
pyatc_cli/templates/: solve_problem.py.template
tests/: test_atc_cli.py
