[tool.poetry]
name = "pyatc-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
"pyatc" = "pyatc_cli.main:contest"

[tool.poetry.dependencies]
python = ">=3.7"
fire = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
